--- a/.github/workflows/firstWorkFlow.yml
+++ b/.github/workflows/firstWorkFlow.yml
@@ -10,6 +10,16 @@ jobs:
       - name: firstJob script
         shell: bash
         run: echo Hello World!  This is the first job
+      - name: Checkout
+        uses: actions/checkout@v3.3.0
+      - name: greetings
+        id: greetings
+        uses: actions/hello-world-javascript-action@main
+        with:
+          who-to-greet: 'Shakira'
+      - name: time
+        run: |
+          echo "The time of the greeting was ${{ steps.greetings.outputs.time }}"
 
   secondjob:
     runs-on: ubuntu-latest
