--- a/.github/workflows/firstWorkFlow.yml
+++ b/.github/workflows/firstWorkFlow.yml
@@ -1,5 +1,7 @@
 name: first workflow
-
+env:
+  WORKFLOW_VAR: "Declared at workflow level"
+  
 on:
   workflow_dispatch:
   
@@ -23,9 +25,20 @@ jobs:
 
   secondjob:
     runs-on: ubuntu-latest
+    needs: firstjob
+    env:
+      JOB_VAR: "Defined in secondjob"
     steps:
       - name: secondJob script
+        env:
+          STEP_VAR: "Defined at step level"
         shell: bash
         run: |
-          echo this is the second job
-          echo and this is a multi-line script
+          echo $WORKFLOW_VAR
+          echo $JOB_VAR
+          echo $STEP_VAR
+          echo "The following is a secret: ${{ secrets.SOME_SECRET }}, of course, I cant tell you because then it wouldnt be a secret..."
+          echo "The following are default environment variables:"
+          echo $GITHUB_ACTOR
+          echo $GITHUB_JOB
+          echo $GITHUB_REF
