--- a/.github/workflows/firstWorkFlow.yml
+++ b/.github/workflows/firstWorkFlow.yml
@@ -45,20 +45,21 @@ jobs:
           echo $GITHUB_JOB
           echo $GITHUB_REF
 
-  deploy:
-    runs_on: ubuntu-latest
-    needs: build
-    environment:
-      name: production
-      url: http://melted-chickens.surge.sh
-    steps:
-      - name: Download the build artifact
-        uses: actions/download-artifact@v3.0.0
-        with:
-          name: build
-      - name: deploy to surge
-        run: npm surge -project '.' -domain melted-chickens.surge.sh
-        env:
-          SURGE_LOGIN: ${{ secrets.SURGE_LOGIN }}
-          SURGE_TOKEN: ${{ secrets.SURGE_TOKEN }}
+  thirdjob: 
+    deploy:
+      runs-on: ubuntu-latest
+      needs: build
+      environment:
+        name: production
+        url: http://melted-chickens.surge.sh
+      steps:
+        - name: Download the build artifact
+          uses: actions/download-artifact@v3.0.0
+          with:
+            name: build
+        - name: deploy to surge
+          run: npm surge -project '.' -domain melted-chickens.surge.sh
+          env:
+            SURGE_LOGIN: ${{ secrets.SURGE_LOGIN }}
+            SURGE_TOKEN: ${{ secrets.SURGE_TOKEN }}
   
